# ChangeLog for virtual/perl-Text-Balanced
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Text-Balanced/ChangeLog,v 1.20 2009/05/12 13:02:03 aballier Exp $

  12 May 2009; Alexis Ballier <aballier@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  keyword ~x86-fbsd

  13 Mar 2009; Torsten Veller <tove@gentoo.org>
  -perl-Text-Balanced-1.95.ebuild, -perl-Text-Balanced-1.98.ebuild:
  Cleanup

  31 Mar 2008; Jeroen Roovers <jer@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  Stable for HPPA too.

  15 Oct 2007; Markus Rothe <corsair@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  Stable on ppc64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  alpha/ia64/x86 stable

  11 May 2007; Joshua Kinard <kumba@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  Stable on mips.

  07 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  ppc stable

  17 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  Stable on sparc

  15 Apr 2007; Markus Rothe <corsair@gentoo.org>
  perl-Text-Balanced-1.98.ebuild:
  Stable on ppc64

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  Marking stable amd64

  04 Apr 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  perl-Text-Balanced-1.98.ebuild:
  Stable on sparc

  04 Mar 2007; Andrej Kacian <ticho@gentoo.org>
  perl-Text-Balanced-1.98.ebuild:
  Stable on x86, bug #169153.

  26 Feb 2007; Michael Cummings <mcummings@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  Updating keywords to match perl-core/Text-Balanced

  12 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  perl-Text-Balanced-2.0.0.ebuild:
  Fixing keywords for now - thanks mr. b

*perl-Text-Balanced-2.0.0 (02 Jan 2007)

  02 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  +perl-Text-Balanced-2.0.0.ebuild:
  Version bump
