@@ -1,3 +1,4 @@
 EBUILD perl-Text-Balanced-2.0.0.ebuild 487 RMD160 ac9d843d9b1cabe67404d53986a7161835ff916b SHA1 40c02bee80a3f3925aa885f5f6620914cd06118c SHA256 8bb3d21921f51de8648e28f10e58c6dfaef32a825c1d4d6fb505eb89b46d2adc
-MISC ChangeLog 2588 RMD160 d476ebdd2c728109a2bd8ab0c83874d71f857387 SHA1 3b8751a070d360bcdf5fec73838ebb0c60097f12 SHA256 8f03c99c43db8d8b8add146242cb54b0e5331a31b4ccb2d91e0cd2b54fb2e5c5
+EBUILD perl-Text-Balanced-2.02.ebuild 471 RMD160 2b22d07986793e9c9540e3c50c62b43ae09d672d SHA1 134425b8e981990cd824d1d858ad6f82ac00a337 SHA256 a485b1bc20bcca69b01016967c234791b00cef9c93a63e30520a03806a5c72c4
+MISC ChangeLog 2723 RMD160 73f26bd0d3568f023f74d4d01bce2e3b9f175e91 SHA1 c2e27bb14f8c6da8693d783191f4e9a299494a48 SHA256 898b4c386640f6553987f9b39bc44f3a67952b745da7f05e276ab4d575f6e261
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
