@@ -1,0 +1,14 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/virtual/perl-Text-Balanced/perl-Text-Balanced-2.02.ebuild,v 1.1 2009/08/02 18:49:28 tove Exp $
+
+DESCRIPTION="Virtual for Text-Balanced"
+HOMEPAGE="http://www.gentoo.org/proj/en/perl/"
+SRC_URI=""
+
+LICENSE="GPL-2"
+SLOT="0"
+KEYWORDS="~amd64-linux ~x86-linux ~x86-macos ~x86-solaris"
+IUSE=""
+
+RDEPEND="~perl-core/Text-Balanced-${PV}"
